--- a/aulas 13 - 15/aula 14/index.html
+++ b/aulas 13 - 15/aula 14/index.html
@@ -11,13 +11,19 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1 class="titulo-principal">Título</h1>
+        <h1 class="titulo-principal">Hora do Dia</h1>
     </header>
     <main class="corpo-principal">
         <div class="box-principal">
             <section class="secao-dividir">
-                <div class="box-section-1"></div>
-                <div class="box-section-2"></div>
+                <div class="box-section-1">
+                    <p>Aqui vai aparecer a msg...</p>
+                </div>
+                <div class="box-section-2">
+
+                        <img class="fill" src="./img/manhâ_250.jpg" alt="imagem da hora do dia">
+
+                </div>
 
             </section>
         </div>
