ex hora do dia feito

--- a/aulas 13 - 15/aula 14/index.html
+++ b/aulas 13 - 15/aula 14/index.html
@@ -7,9 +7,9 @@
     <title>Curso JS - CursoemVideo - Aula 13 - Exercícios</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <script src="./script.js" defer></script>
+    
 </head>
-<body onload="carregar()">
+<body onload= "carregar()">
     <header class="cabecalho">
         <h1 class="titulo-principal">Hora do Dia</h1>
     </header>
@@ -17,10 +17,10 @@
         <div class="box-principal">
             <section class="secao-dividir">
                 <div id="msg" class="box-section-1">
-                    Aqui vai aparecer a msg...
+                    <p id="msg">Aqui vai aparecer a msg...</p> 
                 </div> 
-                <div  class="box-section-2">
-                        <img  id="imagem" class="fill" src="./img/manha_250.jpg" alt="imagem da hora do dia">
+                <div class="box-section-2">
+                        <img id="imagem" class="fill" src="./img/manha_250.jpg" alt="imagem da hora do dia">
                 </div>
 
             </section>
@@ -29,6 +29,6 @@
     <footer>
         <p><em>&copy CursoemVideo</em> </p>
     </footer>
-    
+    <script src="./script14.js"></script>
 </body>
 </html>
