estrutuacao do CSS e HTML do exercicio 4 para inicio do script

--- a/aula 14/exercicio 4/index.html
+++ b/aula 14/exercicio 4/index.html
@@ -16,9 +16,19 @@
     <main class="corpo-principal">
         <div class="box-principal">
             <section class="secao-dividir">
-                <div class="box-section-1"></div>
-                <div class="box-section-2"></div>
+                <div class="box-section-1">
+                    <label for="start">Inicio</label>
+                    <input type="number" name="inicio" id="start">
 
+                    <label for="end">Fim</label>
+                    <input type="number" name="fim" id="end">
+
+                    <label for="step">Passo</label>
+                    <input type="number" name="passo" id="step">
+
+                    <input type="button" value="Contar">
+                    
+                </div>
             </section>
         </div>
     </main>
