--- a/aula 14/exercicio 4/index.html
+++ b/aula 14/exercicio 4/index.html
@@ -29,9 +29,7 @@
                     <input type="button" value="Contar" onclick = "contadora()">
                 </div>
                 
-                <div id="resultado">
-                    Contando...
-                </div>
+                <p id="resultado"></p>
 
             </section>
         </div>
