--- a/aula 14/exercicio 4/index.html
+++ b/aula 14/exercicio 4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso JS - CursoemVideo - Aula 13 - Exercícios</title>
+    <title>Curso JS - CursoemVideo - Aula 14 - Exercícios</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilo.css">
     <script src="./scriptfor.js" defer></script>
@@ -26,10 +26,12 @@
                     <label for="step">Passo</label>
                     <input type="number" name="passo" id="step">
 
-                    <input type="button" value="Contar" onclick = "contadora()">
+                    <input type="button" value="Contar" onclick = "contar()">
                 </div>
                 
-                <p id="resultado"></p>
+                <div id="res">
+                    Preparando a contagem...
+                </div>
 
             </section>
         </div>
